--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,8 +12,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #2c5837;
-$secondary : #4d8673;
+$primary   : #5865F2;
+$secondary : #6eadf5;
 $accent    : #a4ffb8;
 
 $dark      : #1D1D1D;
